Bug 1542673, increase history.state size limit, r=qdot

Differential Revision: https://phabricator.services.mozilla.com/D26881